// Copyright IBM Corp. All Rights Reserved.
// Copyright 2020 Intel Corporation
//
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package attestation;
option go_package = "github.com/hyperledger-labs/fabric-private-chaincode/internal/protos/attestation";

message AttestationEvidence {
    // this message is defined with more detail in #412
    // https://github.com/hyperledger-labs/fabric-private-chaincode/issues/412
    enum Type {
        TYPE_UNSPECIFIED = 0;
        TYPE_SGX_EPID = 1;
        TYPE_SGX_DCAP = 2;
    }

    Type type = 1;

    bytes payload = 2;
}

message AttestationParameters {
    bytes parameters = 1;
}
